concord_macros/tests/usage/fail/fail_maybe_field.stderr
error[E0599]: no method named `maybe_filter` found for struct `PendingRequest<'a, Cx, E, T>` in the current scope
  --> tests/usage/fail/fail_maybe_field.rs:19:26
   |
19 |     let _ = api.search().maybe_filter(Some("ranked".to_string())).await?;
   |                          ^^^^^^^^^^^^
   |
help: there is a method `filter` with a similar name
   |
19 -     let _ = api.search().maybe_filter(Some("ranked".to_string())).await?;
19 +     let _ = api.search().filter(Some("ranked".to_string())).await?;
   |
